Make recipes directory and add page for first recipe with link

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href=recipes/chickenbreast.html>Airline Chicken breast</a>
     </body>
 </html>
