Add more recipes and link to them on index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href=recipes/chickenbreast.html>Airline Chicken breast</a>
+        <ul>
+            <li><a href=recipes/chickenbreast.html>Airline Chicken breast</a></li>
+            <li><a href=recipes/mangosalsa.html>Avocado Mango Salsa</a></li>
+            <li><a href=recipes/chickenparm.html>Chicken Parmesan</a></li>
+        </ul>
     </body>
 </html>
